ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Bidder__c/Bidder__c.object-meta.xml
<CustomObject>
    <description>This object is a junction object between Opportinity, Account and Account, where Account references are of record type US Distributor  and record type US Contractor.</description>
    <label>Bidder</label>
    <nameField>
        <displayFormat>Bid-{000000}</displayFormat>
        <label>Bidder Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bidders</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>