ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Bidder__c/fields/Contractor_Account__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contractor</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The account selected in the Contractorfield must be of type Contractor or  type US Contractor.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>US Contractor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bidders (Contractor)</relationshipLabel>
    <relationshipName>Opportunity_Distributor_Contractor</relationshipName>
    <type>Lookup</type>
</CustomField>