ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Bidder__c/fields/Distributor_Account__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Distributor</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The account selected in the Distributor field must be of type Distributor or  type US Distributor.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>US Distributor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bidders (Distributor)</relationshipLabel>
    <relationshipName>Opportunity_Distributor_Contractor1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>