ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Bidder__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Opportunity Record Type should be US Sales Bid</errorMessage>
        <filterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>US Sales Bid</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Bidders</relationshipLabel>
    <relationshipName>Opportunity_Distributor_Contractor</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>