ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Bidder__c/fields/Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_ID__c</fullName>
    <description>Is the combination of the Opportunity ID + DistributorID + Contractor ID This field is not visible.</description>
    <label>Unique ID</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>