ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Bidder__c/validationRules/Cannot_Add_New_Bidder_on_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Add_New_Bidder_on_Closed</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
    ISNEW(),
    OR(  
       ISPICKVAL(Opportunity__r.StageName, &apos;Closed Lost&apos;),
       ISPICKVAL(Opportunity__r.StageName, &apos;Closed Won&apos;),
       ISPICKVAL(Opportunity__r.StageName, &apos;Closed Expired&apos;),
       ISPICKVAL(Opportunity__r.StageName, &apos;Closed Rejected&apos;)
    )
)</errorConditionFormula>
    <errorMessage>Cannot Add new Bidder if Opportunity is Closed</errorMessage>
</ValidationRule>