ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Bidder__c/validationRules/Cannot_Update_after_Quote_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Update_after_Quote_Approved</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   Opportunity__r.Quote_Approved__c,
   OR(
      ISCHANGED( Distributor_Account__c ),
      ISCHANGED( Contractor_Account__c )
   )
)</errorConditionFormula>
    <errorMessage>Distributor / Contractor cannot be changed if Quote is Already Approved</errorMessage>
</ValidationRule>