ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Bidder__c/validationRules/Opportunity_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Update</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Opportunity__c )</errorConditionFormula>
    <errorMessage>Opportunity cannot be changed</errorMessage>
</ValidationRule>